# irisia-gui

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
cream/: Cargo.toml
cream-macro/: Cargo.toml  demo.rs
cream-macro/src/: lib.rs
cream-macro/src/generate/: assemble.rs  build_tree.rs  mod.rs
cream-macro/src/parse/: debug.rs  mod.rs
cream/src/: application.rs  data_source.rs  event.rs  example.rs  lib.rs  map_rc.rs  primary.rs
cream/src/data_driven/: computed.rs  const_data.rs  constant_value.rs  data.rs  dep.rs  interfaces.rs  mod.rs  mut_data.rs  thread_guard.rs  watcher.rs
cream/src/event/: callback.rs  event_flow.rs  event_target.rs  mod.rs
cream/src/renderer/: event_register.rs  layer.rs  mod.rs
cream/src/rendering/: event_register.rs  layer.rs  mod.rs  renderer.rs
cream/src/structure/: child.rs  elem_svc.rs  element.rs  layout.rs  mod.rs
cream/src/style/: mod.rs  style_accept.rs  style_group.rs  style_table_item.rs  style_variant.rs
cream/src/style_/: style_group.rs
cream/src/textbox/: mod.rs  styles.rs
cream_backend/: Cargo.toml
cream_backend/src/: application.rs  lib.rs
cream_backend/src/render_window/: mod.rs  renderer.rs
cream_backend/src/runtime/: global.rs  mod.rs  rt_event.rs  send_event.rs
cream_backend/src/window/: create.rs  mod.rs  renderer.rs  run.rs  timer.rs
cream_backend/src/window_handle/: close_handle.rs  create.rs  mod.rs
cream_core/: Cargo.toml
cream_core/examples/: impl_style.rs  style_macro.rs  test.rs  window.rs
cream_core/src/: lib.rs  primary.rs  thread_guard.rs
cream_core/src/application/: elem_table.rs  event.rs  mod.rs
cream_core/src/element/: mod.rs  proxy_layer.rs  render_content.rs  render_fn_macro.rs
cream_core/src/event/: event_flow.rs  global_event_register.rs  mod.rs  standard.rs
cream_core/src/macro_helper/: for_loop.rs  mod.rs
cream_core/src/render/: mod.rs
cream_core/src/structure/: add_child.rs  branch.rs  cache_box.rs  chain.rs  empty.rs  fn_helper.rs  mod.rs  node.rs  repeating.rs  slot.rs
cream_core/src/style/: branch.rs  chain.rs  mod.rs  reader.rs  units.rs
examples/: Cargo.toml  counter.rs  hook.rs  impl_style.rs  props_macro.rs  simple_window.rs  simple_window2.rs  style_macro.rs  test_macro.rs  window.rs  window_backend.rs  window_get_id.rs
irisia/: Cargo.toml
irisia-backend/: Cargo.toml
irisia-backend/src/: application.rs  lib.rs
irisia-backend/src/render_window/: mod.rs  renderer.rs  window.rs
irisia-backend/src/runtime/: mod.rs  rt_event.rs
irisia-backend/src/window_handle/: close_handle.rs  create.rs  mod.rs
irisia-core/: Cargo.toml
irisia-core/src/: lib.rs  primary.rs  primitive.rs  prop_test.rs  update_with.rs
irisia-core/src/application/: app_inner.rs  backend.rs  content.rs  elem_table.rs  mod.rs
irisia-core/src/dom/: mod.rs  peek_children.rs  render.rs  shared.rs  update.rs
irisia-core/src/element/: children_setter.rs  mod.rs  props.rs  render_content.rs  render_element.rs  render_fn_macro.rs  runtime_init.rs  style_peeker.rs  update_element.rs
irisia-core/src/event/: element_handle.rs  mod.rs
irisia-core/src/macro_helper/: mod.rs
irisia-core/src/primitive/: mod.rs
irisia-core/src/structure/: activate.rs  add_child.rs  branch.rs  cache.rs  cache_box.rs  chain.rs  empty.rs  into_tree_builder.rs  layout_once.rs  mod.rs  node.rs  once.rs  repeating.rs  slot.rs  visit.rs
irisia-core/src/style/: mod.rs  pixel.rs  reader.rs
irisia-macros/: Cargo.toml
irisia-macros/src/: consts.rs  dep_search.rs  derive_read_style.rs  derive_style_reader.rs  derive_write_style.rs  generics_unbracketed.rs  inner_impl_listen.rs  lib.rs  main_macro.rs  parse_incomplete.rs  partial_eq.rs  pname.rs  props2.rs  split_generics.rs
irisia-macros/src/app/: mod.rs
irisia-macros/src/build_macro/: el_dec.rs  mod.rs  parse.rs  pat_bind.rs  to_tokens.rs
irisia-macros/src/component/: ast.rs  mod.rs  parse.rs  to_tokens.rs
irisia-macros/src/define_style/: def_body.rs  define.rs  impl_from.rs  mod.rs
irisia-macros/src/dep_search/: macro_dep_guessing.rs  min_macro_dep_guessing.rs  mod.rs
irisia-macros/src/derive_props/: field.rs  impl_.rs  impl_miscellaneous.rs  impl_update_with.rs  mod.rs
irisia-macros/src/derive_style/: anaylyze_fields.rs  attr_parse.rs  derive_enum.rs  derive_struct.rs  extract_paths.rs  mod.rs  parse_attr.rs  parse_paths.rs  style_path.rs  to_tokens.rs
irisia-macros/src/element/: build.rs  cmd.rs  mod.rs  parse.rs
irisia-macros/src/expr/: mod.rs  state_block.rs  state_command.rs  state_expr.rs
irisia-macros/src/property/: mod.rs
irisia-macros/src/style/: mod.rs  number_suffix.rs  stmt.rs
irisia-widgets/: Cargo.toml
irisia-widgets/src/: lib.rs
irisia-widgets/src/box_styles/: border.rs  border_radius.rs  box_shadow.rs  box_style_renderer.rs  margin.rs
irisia-widgets/src/layouts/: base_style.rs  mod.rs
irisia-widgets/src/textbox/: el.rs  mod.rs  selection.rs  styles.rs
irisia-widgets/src/textbox_legacy/: mod.rs  selection.rs
irisia/colors/: generated.rs
irisia/src/: lib.rs  macro_helper.rs  prop_test.rs  update_with.rs
irisia/src/application/: backend.rs  content.rs  mod.rs  redraw_scheduler.rs  root.rs
irisia/src/block/: mod.rs  rect.rs  text.rs
irisia/src/box_styles/: border.rs  border_radius.rs  box_shadow.rs  box_style_renderer.rs  margin.rs  mod.rs
irisia/src/component/: hooks.rs  mod.rs  schedule_rerun.rs
irisia/src/data_flow/: const_data.rs  deps.rs  dirty_flag.rs  listener_list.rs  macros.rs  map.rs  mod.rs  observer.rs  register.rs  trace_cell.rs  watch_on_deref.rs  watcher.rs  wire.rs
irisia/src/dep_watch/: data_source.rs  dep_stack.rs  inferer.rs  mod.rs
irisia/src/dom/: child_nodes.rs  data_structure.rs  drop_protection.rs  element_model.rs  mod.rs  render.rs  update.rs
irisia/src/el_model/: element_model.rs  mod.rs  watcher.rs
irisia/src/element/: children_utils.rs  component.rs  deps.rs  macro_helper.rs  mod.rs  props.rs  render_element.rs
irisia/src/element2/: hooks.rs  mod.rs
irisia/src/event/: listen.rs  metadata.rs  mod.rs
tests/: Cargo.toml  style_macro.rs
(+620 files in other folders)
