[package]
name = "cream-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rand = "0"
lazy_static = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1.0"
quote = "1"
