[package]
name = "cream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cream-macro = { path = "../cream-macro" }
skia-safe = { version = "0", features = ["gl", "textlayout", "binary-cache"] }
anyhow = "1"
lazy_static = "1"
smallvec = "1.9"
getset = "0.1"
