[package]
name = "cream_backend"
version = "0.1.0"
edition = "2021"

[target.'cfg(target_os = "android")'.lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", features = ["android-native-activity"] }
pixels = "0.11"
skia-safe = { version = "0.58", features = [
    "gl",
    "textlayout",
    "binary-cache",
] }
anyhow = "1"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"
