[package]
name = "cream_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cream_macros = { path = "../cream_macros" }
skia-safe = { version = "0.58", features = ["gl", "textlayout", "binary-cache"] }
anyhow = "1"
smallvec = "1.9"
