[package]
name = "cream_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cream_macros = { path = "../cream_macros" }
cream_backend = { path = "../cream_backend" }
anyhow = "1"
smallvec = "1.9"
tokio = { version = "1.26", features = ["sync", "rt-multi-thread"] }
