[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

# [[example]]
# name = "window"
# path = "window.rs"

# [[example]]
# name = "props_macro"
# path = "props_macro.rs"

[[example]]
name = "style_macro"
path = "style_macro.rs"

[[example]]
name = "simple_window"
path = "simple_window.rs"

[dev-dependencies]
tokio = { version = "1.27", features = ["sync", "rt-multi-thread", "macros"] }
irisia = { path = "../irisia" }
#irisia_widgets = { path = "../irisia-widgets" }
