[package]
name = "irisia_backend"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.28", features = ["android-native-activity"] }
pixels = "0.12"
skia-safe = { version = "0.66", features = ["textlayout", "binary-cache"] }
tokio = { version = "1.28", features = ["rt-multi-thread"] }
anyhow = "1"
lazy_static = "1"
futures = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[features]
fps_recorder = []
