[package]
name = "irisia_backend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29", features = ["android-native-activity", "rwh_05"] }
pixels = "0.13"
skia-safe = { version = "0.70", features = ["textlayout", "binary-cache"] }
tokio = { version = "1.28", features = ["rt-multi-thread"] }
anyhow = "1"
lazy_static = "1"
futures = "0.3"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.11.0"

[features]
fps_recorder = []
