[package]
name = "irisia_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irisia_macros = { path = "../irisia-macros" }
irisia_backend = { path = "../irisia-backend", features = ["fps_recorder"] }
anyhow = "1"
smallvec = "1.9"
tokio = { version = "1.26", features = ["sync", "rt-multi-thread"] }
