[package]
name = "irisia_core"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irisia_macros = { path = "../irisia-macros" }
irisia_backend = { path = "../irisia-backend", features = ["fps_recorder"] }
anyhow = "1"
take_mut = "0.2"
smallvec = "1.9"
tokio = { version = "1.28", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
irisia_utils = { path = "../irisia-utils" }
