[package]
name = "irisia_macros"
version = "0.0.1"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = ">=2.0.15", features = ["full", "extra-traits", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"
case = "1.0"
