[package]
name = "irisia_macros"
version = "1.0.0"
edition = "2021"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = ">=2.0.38", features = [
    "full",
    "extra-traits",
    "visit",
    "visit-mut",
] }
quote = "1.0"
proc-macro2 = "1.0"
case = "1.0"

[features]
default = ["macro-dep-guessing"]
macro-dep-guessing = []
