[package]
name = "irisia_widgets"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irisia = { path = "../irisia" }
smallvec = "1.10"
tokio = { version = "*", features = ["sync"] }
lazy_static = "1"

[dependencies.taffy]
version = "0.8"
default-features = false
features = ["block_layout", "flexbox", "grid", "content_size", "std"]
