[package]
name = "irisia"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
take_mut = "0.2"
smallvec = "1.9"
tokio = { version = "1.40", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
irisia_macros = { path = "../irisia-macros" }
irisia_backend = { path = "../irisia-backend", features = ["fps_recorder"] }
irisia_utils = { path = "../irisia-utils" }
impl_variadics = "0.1.1"
stack_box = "1"

[features]
dhat_heap = ["irisia_backend/dhat_heap"]
