[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
# irisia_widgets = { path = "../irisia-widgets" }
irisia = { path = "../irisia" }
irisia_backend = { path = "../irisia-backend" }
irisia_macros = { path = "../irisia-macros" }
irisia_utils = { path = "../irisia-utils" }

[[test]]
name = "style_macro"
path = "style_macro.rs"
